--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
     <div style="margin-top:12px">
       <h3>Contact Info</h3>
       <p class="small">Email: info@sumayya-foundation.com</p>
-      <p class="small">Phone: +256 708 231 569</p>
+      <p class="small">Phone: +256 746 732708</p>
     </div>
   </section>
 </main>
